--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -94,61 +94,8 @@ RUN apk add --no-cache git make gcc musl-dev elfutils-dev && \
     echo "Installed libbpf version:" && \
     cat /usr/include/bpf/libbpf_version.h
 
-# Create custom cmake modules directory and FindLLVM.cmake
-RUN mkdir -p /usr/local/share/cmake/Modules && \
-    echo '# Custom FindLLVM.cmake that bypasses problematic components' > /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo 'set(LLVM_FOUND TRUE)' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo 'set(LLVM_INCLUDE_DIRS "/usr/include/llvm17")' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo 'set(LLVM_LIBRARY_DIRS "/usr/lib/llvm17/lib")' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '# Use llvm-config binary to get information' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo 'find_program(LLVM_CONFIG_EXE NAMES llvm-config llvm-config-17)' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo 'if(LLVM_CONFIG_EXE)' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  message(STATUS "Found llvm-config at ${LLVM_CONFIG_EXE}")' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  ' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  # Get LLVM version' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  execute_process(' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '    COMMAND ${LLVM_CONFIG_EXE} --version' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '    OUTPUT_VARIABLE LLVM_VERSION' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '    OUTPUT_STRIP_TRAILING_WHITESPACE' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  )' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  ' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  # Get LLVM library list (without problematic ones)' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  execute_process(' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '    COMMAND ${LLVM_CONFIG_EXE} --libs' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '    OUTPUT_VARIABLE LLVM_LIBRARIES' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '    OUTPUT_STRIP_TRAILING_WHITESPACE' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  )' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  ' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  # Convert to CMake list' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  string(REPLACE " " ";" LLVM_LIBRARIES "${LLVM_LIBRARIES}")' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  ' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  # Get LLVM system libraries' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  execute_process(' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '    COMMAND ${LLVM_CONFIG_EXE} --system-libs' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '    OUTPUT_VARIABLE LLVM_SYSTEM_LIBS' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '    OUTPUT_STRIP_TRAILING_WHITESPACE' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  )' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  ' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  # Convert to CMake list' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  string(REPLACE " " ";" LLVM_SYSTEM_LIBS "${LLVM_SYSTEM_LIBS}")' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  ' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  # Define core LLVM components - important for bpftrace to work' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  set(LLVM_AVAILABLE_LIBS ' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '      LLVMX86Info LLVMX86Desc LLVMObject LLVMBitReader LLVMCore LLVMSupport' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '      LLVMTransformUtils LLVMTarget LLVMAnalysis LLVMMC LLVMMCParser LLVMProfileData' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '      LLVMScalarOpts LLVMBinaryFormat LLVMRemarks' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  )' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo 'else()' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  message(WARNING "llvm-config not found, setting minimal LLVM configuration")' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  set(LLVM_AVAILABLE_LIBS ' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '      LLVMX86Info LLVMX86Desc LLVMObject LLVMBitReader LLVMCore LLVMSupport' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '  )' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo 'endif()' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo '' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo 'include(FindPackageHandleStandardArgs)' >> /usr/local/share/cmake/Modules/FindLLVM.cmake && \
-    echo 'find_package_handle_standard_args(LLVM DEFAULT_MSG LLVM_FOUND)' >> /usr/local/share/cmake/Modules/FindLLVM.cmake
+# Create simplified FindLLVM.cmake - create file in build time to avoid heredoc issues
+COPY custom-FindLLVM.cmake /usr/local/share/cmake/Modules/FindLLVM.cmake
 
 # If bcc-dev doesn't provide all needed files, compile from source
 RUN if [ ! -f "/usr/include/bcc/bcc_version.h" ]; then \
